# bibtex-utils

./: README.md  pyproject.toml  requirements.txt  setup.cfg
bib/: dsg_talk_october_2022.bib  main.bib
bibtex_utils/: __init__.py  get_bib_from_doi.py  harmonize_tag_zenodo.py  ieee_case.py  merge_bib.py
bibtex_utils/bib_data/: acronyms.json
scripts/: bu_convert_bib_to_json_website.py  bu_get_bib_from_doi.py  bu_harmonize_tag_zenodo.py  bu_merge_bib.py
